# window_capture

./: CMakeLists.txt  MANIFEST.in  README.md  conanfile.txt  meson.build  meson_wrapper.py  pyproject.toml  run_conan.py  setup.py  test_capture.py  vcpkg.json
.github/workflows/: build-windows-wheel.yml
src/: window_capture.cpp
window_capture/: meson.build  window_capture.cpp
