[project]
name = "window_capture"
version = "0.1.0"
description = "Simple DLL to capture window buffer to BMP"
requires-python = ">=3.13"

[build-system]
requires = [
    "setuptools>=65.5.0",
    "wheel>=0.38.4",
    "numpy>=2.3.2"
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pywinauto>=0.6.9",
    "numpy>=2.3.2",
    "window_capture>=0.1.0"
]