[project]
name = "window_capture"
version = "0.1.0"
description = "Simple DLL to capture window buffer to BMP"
requires-python = ">=3.13"

[build-system]
requires = ["meson-python", "conan", "numpy==2.3.2"]
build-backend = "mesonpy"

[tool.meson-python]
meson = "meson_wrapper.py"

[tool.meson-python.args]
setup = ["-Dbuildtype=release", "-Db_ndebug=if-release", "-Db_vscrt=md"]
compile = ["-v"]
install = ["--no-rebuild"]

[dependency-groups]
test = [
    "window_capture"
]